[project]
name = "python-dsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "mediapipe>=0.10.14",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pypandoc>=1.15",
    "pypandoc-binary>=1.15",
    "python-docx>=1.2.0",
    "scikit-learn>=1.7.1",
]
